# speech2text-ai

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  audio_recorder.py  hotkey_windows.py  main.py  pyproject.toml  setup.py  test_main.py  transcriber.py  whisper-key.py
.claude/commands/: add-story.md  build-exe.md  build-pypi.md  bump.md  release.md  test-from-wsl.md  triage-pr.md
.github/workflows/: claude-code-review.yml  claude.yml
docs/: gpu-setup.md  platform-abstraction.md  project-index.md  voice-commands.md
docs/design/: auto-paste-reliability.md  voice-commands-open-items.md  voice-commands.md
docs/plans/: 2026-02-03-first-run-onboarding.md  2026-02-07-gpu-detection-implementation.md  2026-02-14-1754-rocm-dll-bundling-implementation.md  2026-03-08-0952-overlay-config.md
docs/research/: 2026-02-16-linux-support-research.md  2026-02-16-macos-transcription-freeze-research.md  2026-02-16-wsl-hotkey-shim-research.md  cli-agents-platform-support.md  cli-wrapper-mode.md  llm-vision-app-control.md  pyapp-packaging.md  sherpa-onnx-amd-gpu-support.md  terminal-ui-research.md  tmux-on-windows.md  whisper-cpp-vs-faster-whisper-2026.md  window-management-research.md  zwift-third-party-policy.md
docs/roadmap/: completed.md  roadmap.md
py-build/: build-config.example.json  build-windows.ps1  whisper-key.spec
py-build/hooks/: rth_rocm_paths.py
scripts/: test.py
src/: hotkey_macos.py  main.py  main.py.pro.backup  typer.py
src/whisper_key/: audio_feedback.py  audio_recorder.py  clipboard_manager.py  commands.defaults.yaml  main.py  (+14 more)
(+26 files in other folders)
